pg.louso.ru/etc/iptables/rules.v4
# Generated by iptables-save v1.8.10 (nf_tables) on Mon Jun 30 17:00:24 2025
*mangle
:PREROUTING ACCEPT [456686:388421261]
:INPUT ACCEPT [216962:179513595]
:FORWARD ACCEPT [239695:208865471]
:OUTPUT ACCEPT [225108:204034542]
:POSTROUTING ACCEPT [464803:412900013]
-A PREROUTING -m connmark --mark 0x43 -j MARK --set-xmark 0x43/0xffffffff
-A PREROUTING -m set --match-set pg2_proxy dst -j MARK --set-xmark 0x43/0xffffffff
-A PREROUTING -m set --match-set proxied dst -j MARK --set-xmark 0x42/0xffffffff
-A FORWARD -m set --match-set pg2_proxy dst -j MARK --set-xmark 0x43/0xffffffff
-A FORWARD -m mark --mark 0x43 -j CONNMARK --save-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A FORWARD -o gre-p2p -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -i gre-p2p -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -o wg200 -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -i wg200 -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -o gre-pg2 -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -i gre-pg2 -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -m set --match-set pg2_proxy dst -j MARK --set-xmark 0x43/0xffffffff
-A OUTPUT -m set --match-set proxied dst -j MARK --set-xmark 0x42/0xffffffff
-A OUTPUT -m mark --mark 0x42 -j CONNMARK --save-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A OUTPUT -m mark --mark 0x43 -j CONNMARK --save-mark --nfmask 0xffffffff --ctmask 0xffffffff
COMMIT
# Completed on Mon Jun 30 17:00:24 2025
# Generated by iptables-save v1.8.10 (nf_tables) on Mon Jun 30 17:00:24 2025
*filter
:INPUT DROP [592:28747]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [225108:204034542]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 159.69.33.152/32 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p udp -m udp --dport 16200 -j ACCEPT
-A INPUT -s 159.69.33.152/32 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -s 192.168.0.0/16 -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wg200 -j ACCEPT
-A FORWARD -o wg200 -j ACCEPT
COMMIT
# Completed on Mon Jun 30 17:00:24 2025
# Generated by iptables-save v1.8.10 (nf_tables) on Mon Jun 30 17:00:24 2025
*nat
:PREROUTING ACCEPT [3200:413265]
:INPUT ACCEPT [1091:75054]
:OUTPUT ACCEPT [1369:91004]
:POSTROUTING ACCEPT [1229:88226]
-A POSTROUTING -o gre-pg2 -m mark --mark 0x43 -j SNAT --to-source 10.26.0.1
-A POSTROUTING -s 10.200.0.0/24 ! -d 10.200.0.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -o wg200 -j SNAT --to-source 10.200.0.1
-A POSTROUTING -o gre-p2p -m set --match-set proxied dst -j SNAT --to-source 10.24.0.1
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Mon Jun 30 17:00:24 2025
